--- a/fotomaton/src/pages/home/home.css
+++ b/fotomaton/src/pages/home/home.css
@@ -1,20 +1,18 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
 .logo {
-  height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
-.logo:hover {
+.button:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
-.logo.react:hover {
+.button.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
@@ -28,15 +26,11 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
+  a:nth-of-type(2) .button {
     animation: logo-spin infinite 20s linear;
   }
 }
 
-.card {
+.button {
   padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
