--- a/fotomaton/src/pages/home/home.css
+++ b/fotomaton/src/pages/home/home.css
@@ -9,28 +9,10 @@
   will-change: filter;
   transition: filter 300ms;
 }
-.button:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.button.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .button {
-    animation: logo-spin infinite 20s linear;
-  }
-}
 
 .button {
   padding: 2em;
+  display: flex;
+  justify-content: center;
+  gap: 20px
 }
