--- a/fotomaton/src/pages/camera/camera.css
+++ b/fotomaton/src/pages/camera/camera.css
@@ -60,6 +60,29 @@
   background-color: var(--color-token-light-background-2);
 }
 
+.camera__timer {
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+  margin: auto;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+  background-color: #808080;
+  width: 100px;
+  height: 100px;
+  opacity: 0.7;
+}
+
+.timer-font {
+  color: #fff;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-size: 50px;
+}
+
 .camera__controls {
   width: 3rem;
   height: 3rem;
